--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: '3.4'
 services:
   db:
-    image: postgres:10.1
+    image: postgres:12.3
     ports:
       - '5432:5432'
+    environment:
+      - POSTGRES_HOST_AUTH_METHOD=trust
